--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -1,13 +1,9 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 255, 255, 255;
+
+.t-share {
+  min-width: 192px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background-color: rgb(var(--background-start-rgb));
+.t-val {
+  min-width: 128px;
 }
