--- a/web/src/comp/HeaderMenu.module.css
+++ b/web/src/comp/HeaderMenu.module.css
@@ -1,6 +1,6 @@
 .header {
   height: rem(56px);
-  margin-bottom: rem(120px);
+  margin-bottom: rem(18px);
   background-color: var(--mantine-color-body);
   border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
@@ -10,6 +10,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.headerSpan {
+  position: relative;
+  top: -5px;
+  margin-left: 0.4rem;
 }
 
 .link {
